DataBase.ktの追加 関数を<T>? = nullからlateinitに変更

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,3 +21,9 @@ data:
     world: "world"
     # value
     value: 5
+database:
+  host: "localhost"
+  user: "root"
+  pass: "password"
+  port: "3306"
+  db: "db"
